force-app/main/default/objects/Permission_Set_Grant__c/Permission_Set_Grant__c.object-meta.xml
<CustomObject>
    <label>Permission Set Grant</label>
    <nameField>
        <displayFormat>PSG-{000000}</displayFormat>
        <label>Permission Set Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Set Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>