force-app/main/default/objects/Permission_Set_Grant__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Duration</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>