force-app/main/default/objects/Permission_Set_Grant__c/fields/Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Duration_Unit__c</fullName>
    <label>Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>