force-app/main/default/objects/Permission_Set_Grant__c/fields/Expired_Revoked__c.field-meta.xml
<CustomField>
    <fullName>Expired_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired/Revoked</label>
    <type>Checkbox</type>
</CustomField>