force-app/main/default/objects/Permission_Set_Grant__c/fields/Granted__c.field-meta.xml
<CustomField>
    <fullName>Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Granted</label>
    <type>Checkbox</type>
</CustomField>