force-app/main/default/objects/Permission_Set_Grant__c/fields/Granted_At__c.field-meta.xml
<CustomField>
    <fullName>Granted_At__c</fullName>
    <label>Granted At</label>
    <type>DateTime</type>
</CustomField>